<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_question_current_title">Current Question:</string>
    <string name="main_question_current_placeholder_image">Name this game:</string>
    <string name="main_question_current_placeholder">About how long had Captain America been sleeping in ice before he was awoken in The Avengers movie?</string>
    <string name="main_question_points_placeholder">0</string>
    <string name="main_question_points">%s points</string>
    <string name="main_question_time_remaining_placeholder">-43:05</string>
    <string name="main_answer_placeholder">70 years</string>
    <string name="main_answer_title">Your Answer</string>
    <string name="main_answer_time_sent">Sent at %s</string>
    <string name="error_send_answer">Answer Not Sent. Be sure you are following @NerdTrivia.</string>
    <string name="main_send_answer_title">Answer</string>
    <string name="main_question_none">No questions active.</string>
    <string name="main_question_photo_not_found">Photo could not be loaded. Tap to open image in browser.</string>
    <string name="dialog_loading">Loading %s Authorization</string>
    <string name="dialog_please_wait">Please wait…</string>
    <string name="auth_cancelled">Authorization Cancelled</string>
    <string name="twitter_auth_connected">Connected to Twitter!</string>
    <string name="twitter_auth_failed">Twitter Auth Failed. :(</string>
    <string name="error_resending">Error resending answer, try to submit again.</string>
    <string name="action_refresh">Refresh</string>
    <string name="main_question_photo_open_browser_toast">Opening Image in Browser</string>
    <string name="notification_sending_text">Sending answer...</string>
    <string name="notification_sent">Sent!</string>
    <string name="notification_question_new">New Question</string>
    <string name="app_service_name">NerdTriviaService</string>
    <string name="app_receiver_name">NerdReceiver</string>
    <string name="main_question_loading">Loading Question...</string>
    <string name="main_answer_send_toast">Submit Answer</string>
    <string name="main_answer_submit_no_text">No answer to submit!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis imperdiet fringilla odio, ut fermentum erat consequat nec. Curabitur vestibulum mauris vel purus luctus placerat vel ac augue. Sed at porta mi, quis lacinia diam. Suspendisse tellus nisl, vulputate aliquam risus sed, fermentum luctus metus.</string>
    <string name="title_activity_wizard">Welcome to NerdTrivia!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_action_next">Next</string>
    <string name="menu_action_previous">Previous</string>
    <string name="title_twitter_auth">Twitter Auth</string>
    <string name="menu_action_twitter">Sign In</string>

    <string name="wizard_welcome">Welcome to Nerd, the unofficial NerdTrivia App for Android!</string>
    <string name="wizard_welcome_about">NerdTrivia is a Twitter Trivia Game developed by @lauralollipop. More info: http://nerdtrivia.net.</string>
    <string name="wizard_welcome_get_ready">Let\'s get you ready to play!</string>

    <string name="wizard_twitter_sign">Sign into Twitter to get started.</string>
    <string name="wizard_twitter_info">Questions are asked hourly on Twitter from the @NerdTrivia account between 8am to 6pm PT.</string>
    <string name="wizard_twitter_connected">Connected</string>

    <string name="wizard_follow_follow">Follow @NerdTrivia in order to send DMs</string>
    <string name="wizard_follow_info">Responses are sent via DM, the NerdTrivia bot will @reply you if you have correctly answered the question.</string>
    <string name="wizard_follow_following">You are now following @NerdTrivia!</string>

    <string name="menu_action_follow">Follow @NerdTrivia</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="wizard_follow_attempting">Attempting to Follow</string>
    <string name="wizard_follow_error">There was an error following NerdTrivia, try again.</string>
    <string name="wizard_follow_waiting">Wait until NerdTrivia follows you back to submit answers.</string>
</resources>